--- a/toothdaily/src/main/res/layout/daily_record_layout.xml
+++ b/toothdaily/src/main/res/layout/daily_record_layout.xml
@@ -62,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/time_period_notes_hint"
+                android:lines="5"
                 android:inputType="text"
                 android:text="@{record.notes}"
                 tools:text="清洁牙套" />
