--- a/robin-support-recyclerview/src/main/res/layout/activity_robin_list.xml
+++ b/robin-support-recyclerview/src/main/res/layout/activity_robin_list.xml
@@ -20,8 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ViewStub
-        android:id="@+id/fragment_view_stub"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
