--- a/robin-support-recyclerview/src/main/res/layout/activity_robin_list.xml
+++ b/robin-support-recyclerview/src/main/res/layout/activity_robin_list.xml
@@ -22,9 +22,9 @@
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
