--- a/tooth-care/src/main/res/layout/activity_tool.xml
+++ b/tooth-care/src/main/res/layout/activity_tool.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cting.com.robin.support.toothcare.ToolActivity">
+    tools:context="cting.com.robin.support.toothcare.activities.ToolActivity">
 
     <TextView
         android:layout_width="wrap_content"
