--- a/tooth-care/src/main/res/layout/time_slice_item.xml
+++ b/tooth-care/src/main/res/layout/time_slice_item.xml
@@ -8,7 +8,7 @@
         <import type="cting.com.robin.support.toothcare.models.TimeSlice" />
 
         <variable
-            name="timeSlice"
+            name="item"
             type="TimeSlice" />
     </data>
 
@@ -30,7 +30,7 @@
                 android:ems="5"
                 android:hint="start time"
                 android:inputType="time"
-                android:text="@{timeSlice.startTime}" />
+                android:text="@{item.startTime}" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -49,7 +49,7 @@
                 android:ems="5"
                 android:hint="end time"
                 android:inputType="time"
-                android:text="@{timeSlice.endTime}" />
+                android:text="@{item.endTime}" />
         </android.support.design.widget.TextInputLayout>
 
 
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="@{timeSlice.duration}"
+            android:text="@{item.duration}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.726"
