--- a/robin-support-recyclerview/src/main/res/menu/menu_robin_list.xml
+++ b/robin-support-recyclerview/src/main/res/menu/menu_robin_list.xml
@@ -7,4 +7,15 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_export"
+        android:icon="@android:drawable/stat_sys_upload_done"
+        android:title="@string/ic_menu_title_export"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_import"
+        android:icon="@android:drawable/stat_sys_download_done"
+        android:title="@string/ic_menu_title_import"
+        app:showAsAction="always"/>
 </menu>
