--- a/robin-support-recyclerview/src/main/res/menu/menu_robin_list.xml
+++ b/robin-support-recyclerview/src/main/res/menu/menu_robin_list.xml
@@ -12,10 +12,15 @@
         android:id="@+id/action_export"
         android:icon="@android:drawable/stat_sys_upload_done"
         android:title="@string/ic_menu_title_export"
-        app:showAsAction="always"/>
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_import"
         android:icon="@android:drawable/stat_sys_download_done"
         android:title="@string/ic_menu_title_import"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_add"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/ic_menu_title_add"
         app:showAsAction="always"/>
 </menu>
