--- a/tooth-care/src/main/res/layout/daily_record_detail.xml
+++ b/tooth-care/src/main/res/layout/daily_record_detail.xml
@@ -72,22 +72,12 @@
                 tools:text="清洁牙套" />
         </android.support.design.widget.TextInputLayout>
 
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="@{clickListener::onClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@android:drawable/ic_input_add" />
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="0px"
             android:layout_height="0px"
-            app:layout_constraintBottom_toTopOf="@+id/add_btn"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/notes_text"
             app:layout_constraintStart_toStartOf="@+id/notes_text"
             app:layout_constraintTop_toBottomOf="@+id/notes_text" />
