--- a/tooth-care/src/main/res/layout/progress_detail.xml
+++ b/tooth-care/src/main/res/layout/progress_detail.xml
@@ -56,21 +56,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/add_newday_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:listitem="@layout/daily_record_list_item"
-            app:layout_constraintTop_toBottomOf="@+id/progress_daycount_totaltime_text" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_newday_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            app:layout_constraintTop_toBottomOf="@+id/progress_daycount_totaltime_text"
+            tools:listitem="@layout/daily_record_list_item" />
     </android.support.constraint.ConstraintLayout>
 </layout>
