--- a/tooth-care/src/main/res/layout/time_slice_add_layout.xml
+++ b/tooth-care/src/main/res/layout/time_slice_add_layout.xml
@@ -15,6 +15,7 @@
         <variable
             name="clickListener"
             type="OnClickListener" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -61,7 +62,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
-            android:id="@+id/add_btn"
+            android:id="@+id/add_new_time_slice_btn"
             android:layout_width="@dimen/time_slice_add_btn_width"
             android:layout_height="@dimen/time_slice_add_btn_width"
             android:layout_marginEnd="16dp"
