--- a/tooth-care/src/main/res/layout/time_slice_add_layout.xml
+++ b/tooth-care/src/main/res/layout/time_slice_add_layout.xml
@@ -6,6 +6,7 @@
     <data>
 
         <import type="cting.com.robin.support.toothcare.models.TimeSlice" />
+
         <import type="android.view.View.OnClickListener" />
 
         <variable
@@ -29,11 +30,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:text="@{item.duration}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/end_time_edit"
             app:layout_constraintStart_toEndOf="@+id/start_time_edit"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@{item.duration}"
             tools:text="1h 20m" />
 
         <EditText
@@ -42,11 +43,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:ems="10"
+            android:gravity="center"
             android:inputType="time"
             android:text="@={item.startTime}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="8:30"/>
 
         <EditText
             android:id="@+id/end_time_edit"
@@ -54,12 +57,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="72dp"
             android:ems="10"
+            android:gravity="center"
             android:inputType="time"
             android:text="@={item.endTime}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/start_time_edit"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="9:50" />
 
         <Button
             android:id="@+id/add_new_time_slice_btn"
@@ -68,9 +73,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/circle_red_background"
+            android:gravity="center"
             android:onClick="@{clickListener::onClick}"
             android:text="+"
-            android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="14sp"
             android:textStyle="bold"
