--- a/tooth-care/src/main/res/layout/time_slice_add_layout.xml
+++ b/tooth-care/src/main/res/layout/time_slice_add_layout.xml
@@ -7,16 +7,9 @@
 
         <import type="cting.com.robin.support.toothcare.models.TimeSlice" />
 
-        <import type="android.view.View.OnClickListener" />
-
         <variable
             name="item"
             type="TimeSlice" />
-
-        <variable
-            name="clickListener"
-            type="OnClickListener" />
-
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -66,26 +59,18 @@
             app:layout_constraintVertical_bias="0.0"
             tools:text="9:50" />
 
-        <Button
+        <cting.com.robin.support.toothcare.views.StateButton
             android:id="@+id/add_new_time_slice_btn"
             android:layout_width="@dimen/time_slice_add_btn_width"
             android:layout_height="@dimen/time_slice_add_btn_width"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:background="@drawable/circle_red_background"
-            android:gravity="center"
-            android:onClick="@{clickListener::onClick}"
-            android:text="+"
-            android:textColor="#ffffff"
-            android:textSize="14sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.732"
             app:layout_constraintStart_toEndOf="@+id/end_time_edit"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.498" />
-
 
     </android.support.constraint.ConstraintLayout>
 </layout>
