--- a/teeth-care/src/main/res/layout/daily_detail_fragment.xml
+++ b/teeth-care/src/main/res/layout/daily_detail_fragment.xml
@@ -7,11 +7,13 @@
 
         <import type="cting.com.robin.support.teethcare.daily.DailyRecord" />
 
-        <import type="android.view.View.OnClickListener" />
-
         <variable
             name="item"
             type="DailyRecord" />
+
+        <variable
+            name="editMode"
+            type="Boolean" />
 
     </data>
 
@@ -39,7 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@{item.total}"
+            android:textColor="@color/daily_detail_total_time_color"
+            android:text="@{item.totalTime}"
             app:layout_constraintBottom_toBottomOf="@+id/date_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.96"
@@ -48,9 +51,11 @@
             tools:text="20h 20m" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/notes_text"
+            android:id="@+id/note_text_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintEnd_toEndOf="@+id/date_text"
@@ -59,9 +64,12 @@
             app:layout_constraintTop_toBottomOf="@+id/date_text">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/note_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="备注"
+                android:hint="@string/daily_detail_note_hint"
+                android:enabled="@{editMode}"
+                android:saveEnabled="@{editMode}"
                 android:inputType="text"
                 android:lines="5"
                 android:text="@={item.note}"
@@ -76,9 +84,9 @@
             android:paddingBottom="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/notes_text"
-            app:layout_constraintStart_toStartOf="@+id/notes_text"
-            app:layout_constraintTop_toBottomOf="@+id/notes_text"
+            app:layout_constraintEnd_toEndOf="@+id/note_text_container"
+            app:layout_constraintStart_toStartOf="@+id/note_text_container"
+            app:layout_constraintTop_toBottomOf="@+id/note_text_container"
             android:background="#889cdcd4"/>
 
 
