--- a/teeth-care/src/main/res/values/colors.xml
+++ b/teeth-care/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="state_btn_text_color">#ffffff</color>
+    <color name="daily_detail_total_time_color">#55c0f9</color>
 </resources>
