--- a/teeth-care/src/main/res/layout/daily_detail_fragment.xml
+++ b/teeth-care/src/main/res/layout/daily_detail_fragment.xml
@@ -26,11 +26,11 @@
             android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:focusedByDefault="true"
             android:gravity="center"
             android:text="@{item.date}"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:focusedByDefault="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="2018/02/28" />
@@ -41,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/daily_detail_total_time_color"
             android:text="@{item.totalTime}"
+            android:textColor="@color/daily_detail_total_time_color"
             app:layout_constraintBottom_toBottomOf="@+id/date_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.96"
@@ -54,10 +54,9 @@
             android:id="@+id/note_text_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             app:layout_constraintEnd_toEndOf="@+id/date_text"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/date_text"
@@ -67,27 +66,37 @@
                 android:id="@+id/note_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/daily_detail_note_hint"
                 android:enabled="@{editMode}"
-                android:saveEnabled="@{editMode}"
+                android:hint="@string/daily_detail_note_hint"
                 android:inputType="text"
                 android:lines="5"
+                android:saveEnabled="@{editMode}"
                 android:text="@={item.note}"
                 tools:text="清洁牙套" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="0px"
             android:layout_height="0px"
-            android:paddingTop="8dp"
+            android:layout_margin="8dp"
             android:paddingBottom="8dp"
-            android:layout_marginBottom="8dp"
+            android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/note_text_container"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/note_text_container"
             app:layout_constraintTop_toBottomOf="@+id/note_text_container"
-            android:background="#889cdcd4"/>
+            app:layout_constraintVertical_bias="0.412">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"/>
+
+        </android.support.v7.widget.CardView>
 
 
     </android.support.constraint.ConstraintLayout>
