--- a/teeth-care/src/main/res/layout/activity_main.xml
+++ b/teeth-care/src/main/res/layout/activity_main.xml
@@ -20,8 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize" />
